<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="278dp"
            android:layout_height="71dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="99dp"
            android:layout_marginBottom="39dp"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="355dp"
            android:layout_height="28dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="520dp"
            android:text="@string/goal"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button1"
            android:layout_width="245dp"
            android:layout_height="75dp"
            android:layout_marginStart="141dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="167dp"
            android:layout_marginBottom="172dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/create_goal"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="290dp"
            android:layout_height="72dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="206dp"
            android:layout_height="44dp"
            android:layout_marginStart="97dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="65dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="367dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/when_do_you_want_to_reach_this_goal"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="176dp"
            android:layout_height="50dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="113dp"
            android:layout_marginBottom="38dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/d_m_yr"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>